<resources>
    <string name="app_name">Lista de Compras</string>
    <string name="inserir">inserir</string>
    <string name="nome_produto">Nome do produto</string>
    <string name="cadastro_produto">Cadastro de Produto</string>
    <string name="hint_produto">Biscoito</string>
    <string name="hint_quantidade">3</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor">Valor</string>
    <string name="hint_valor">R$ 0.00</string>
    <string name="adicionar_itens">Adicionar Itens</string>
    <string name="total_r_0_00">Total: R$ 0,00</string>
    <string name="qtd">Qtd</string>
</resources>