<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CadastroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_produto"
        android:textStyle="bold"
        android:textSize="21sp"/>

    <ImageView
        android:id="@+id/img_foto_produto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome_produto"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edt_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_produto"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantidade"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edt_qtd_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_quantidade"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edt_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/hint_valor"/>

    <Button
        android:id="@+id/btn_inserir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/inserir"/>

</LinearLayout>